--- a/miniProjects/reactapp/src/App.css
+++ b/miniProjects/reactapp/src/App.css
@@ -1,38 +1,42 @@
-.App {
+.App{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header{
+  background-color: #ff0000;
+  font-size: larger;
+  border: 2px solid;
+  font-weight: 500;
   color: white;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.formHeader{
+margin-top: 12px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add-contact{
+  font-size: initial;
+  font-weight: 500;
+  font-family: fantasy;
+  margin-top: 12px;
+}
+.btn{
+  border-color: cadetblue;
+  color: #8e0625;
+}
+.input{
+margin-bottom: 5px;}
+.contactHeader{
+  font-size: medium;
+  font-weight: 500;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-top: 20px;
+  margin-left: 12px;
+}
+.contacts{
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid;
+  background: #fdeff2;
+  margin-bottom: 2px;
+  margin-left: 12px;
+  margin-right: 5px;
 }
